hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0041.hl
Class x=String.class;
int r=switch(x){
    case Integer:{
        1;
    }
    case CharSequence:{
        2;
    }
    default :{
        3;
    }
};
